fix del contrast de `code` al títols

--- a/custom_dark.scss
+++ b/custom_dark.scss
@@ -24,6 +24,14 @@ $callout-color-important: #0539f6;
   padding-bottom: 8px;
 }
 
+// Per a que els títols de les seccions de `code` (entre backticks) no quedin tan foscos (i contrastin més amb el fons fosc)
+h1, h2, h3, h4 {
+  code {
+    color: #e8e6e3 !important;
+    background-color: #2b2d2f !important;
+  }
+}
+
 /*-- scss:mixins --*/
 
 
